# coro

./: .gitignore  CMakeLists.txt  CMakePresets.json
demo/: echo_server.cpp
include/coro/: io_context.hpp  lazy_io.hpp  task.hpp
include/coro/config/: coro.hpp  log.hpp
include/coro/detail/: compat.hpp  io_context_meta.hpp  lazy_io_awaiter.hpp  spsc_cursor.hpp  task_info.hpp  thread_meta.hpp  thread_safe.hpp  type_traits.hpp  user_data.hpp  worker_meta.hpp
include/coro/log/: log.hpp
include/coro/utility/: as_atomic.hpp  bit.hpp
include/liburing/: io_service.hpp  sqe_awaitable.hpp  task.hpp  utils.hpp  when_all_any.hpp
src/: task.cpp
src/coro/: io_context.cpp
src/coro/detail/: worker_meta.cpp
test/: helloworld.cpp  test_liburing.cpp  test_liburing_echo_server.cpp  test_log.cpp
tests/: delay_and_print.cpp  generator.cpp  helloworld.cpp  io_utils.h  minimal_test.cpp  ping_pong.cpp  task.cpp  when_all_any.cpp
